examples/test/testpolicy18358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18358
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key0: value32
      key15: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value25
          key26: value8
      podSelector:
        matchLabels:
          key40: value8
